order/order.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: default
  name: order
spec:
  containers:
  - name: order
    image: fyerfyer/order:1.0.0
